Update UpdateProductRequest to require at least one field when updating
